# pyunicorn

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTIONS.rst  README.rst  devenv.nix  pyproject.toml  setup.py
docs/source/: development.rst
docs/source/examples/tutorials/: ClimateNetworks.ipynb  EventSeriesAnalysis.ipynb
src/pyunicorn/core/: cache.py  network.py
src/pyunicorn/core/_ext/: numerics.pyx
src/pyunicorn/eventseries/: event_series.py
tests/: conftest.py
tests/test_climate/: test_map_plot.py
tests/test_core/: test_cache.py  test_network.py
tests/test_eventseries/: test_event_series.py
